# Hw09_web

./: README.md  authors.json  connect.py  html.html  json_to_db.py  main.py  models.py  pyproject.toml  result.csv
json/: authors.json
selenium/: spider.py
